--- a/appointment.html
+++ b/appointment.html
@@ -13,7 +13,8 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap"
+          rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -21,7 +22,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +38,8 @@
         <div class="row">
             <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+012 345 6789</a>
+                    <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+012 345
+                        6789</a>
                     <span class="text-body">|</span>
                     <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>info@locdoc.com</a>
                 </div>
@@ -96,92 +98,102 @@
 <!-- Navbar End -->
 
 
-    <!-- Appointment Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="row gx-5">
-                <div class="col-lg-6 mb-5 mb-lg-0">
-                    <div class="mb-4">
-                        <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Appointment</h5>
-                        <h1 class="display-4">Make An Appointment For Your Family</h1>
-                    </div>
-                    <p class="mb-5">Eirmod sed tempor lorem ut dolores. Aliquyam sit sadipscing kasd ipsum. Dolor ea et dolore et at sea ea at dolor, justo ipsum duo rebum sea invidunt voluptua. Eos vero eos vero ea et dolore eirmod et. Dolores diam duo invidunt lorem. Elitr ut dolores magna sit. Sea dolore sanctus sed et. Takimata takimata sanctus sed.</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 me-3" href="">Find Doctor</a>
-                    <a class="btn btn-outline-primary rounded-pill py-3 px-5" href="">Read More</a>
+<!-- Appointment Start -->
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="row gx-5">
+            <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="mb-4">
+                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Appointment</h5>
+                    <h1 class="display-4">Make An Appointment For Your Family</h1>
                 </div>
-                <div class="col-lg-6">
-                    <div class="bg-light text-center rounded p-5">
-                        <h1 class="mb-4">Book An Appointment</h1>
-                        <form id="appointmentForm">
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select bg-white border-0" style="height: 55px;" id="doctorDepartment">
-                                    </select>
-                                </div>
-                               <div class="col-12 col-sm-6">
-                                   <input type="text" id="patientAppPhone" class="form-control bg-white border-0" placeholder="Your Phone" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" id="patientAppName" class="form-control bg-white border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" id="patientAppEmail" class="form-control bg-white border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="date" id="date" data-target-input="nearest">
-                                        <input type="text" id="patientAppDate"
-                                            class="form-control bg-white border-0 datetimepicker-input"
-                                            placeholder="Date" data-target="#date" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class="time" id="time" data-target-input="nearest">
-                                        <input type="text" id="patientAppTime"
-                                            class="form-control bg-white border-0 datetimepicker-input"
-                                            placeholder="Time" data-target="#time" data-toggle="datetimepicker" style="height: 55px;">
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <input value="Make an appointment" class="btn btn-primary w-100 py-3" id="appointmentSubmitBtn" type="submit"></input>
+                <p class="mb-5">This generosity has enabled us to work together to drive innovation and change at the
+                    hospital and support the acquisition of cutting-edge technology, purchase new equipment, redevelop
+                    and expand our facilities so we can improve patient care, build our knowledge and share our
+                    learnings with the world.</p>
+                <a class="btn btn-primary rounded-pill py-3 px-5 me-3" href="search.html">Find Doctor</a>
+                <a class="btn btn-outline-primary rounded-pill py-3 px-5" href="blog.html">Read More</a>
+            </div>
+            <div class="col-lg-6">
+                <div class="bg-light text-center rounded p-5">
+                    <h1 class="mb-4">Book An Appointment</h1>
+                    <form id="appointmentForm">
+                        <div class="row g-3">
+                            <div class="col-12 col-sm-6">
+                                <select class="form-select bg-white border-0" style="height: 55px;"
+                                        id="doctorDepartment">
+                                </select>
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" id="patientAppPhone" class="form-control bg-white border-0"
+                                       placeholder="Your Phone" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" id="patientAppName" class="form-control bg-white border-0"
+                                       placeholder="Your Name" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="email" id="patientAppEmail" class="form-control bg-white border-0"
+                                       placeholder="Your Email" style="height: 55px;">
+                            </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="date" id="date" data-target-input="nearest">
+                                    <input type="text" id="patientAppDate"
+                                           class="form-control bg-white border-0 datetimepicker-input"
+                                           placeholder="Date" data-target="#date" data-toggle="datetimepicker"
+                                           style="height: 55px;">
                                 </div>
                             </div>
-                        </form>
-                    </div>
+                            <div class="col-12 col-sm-6">
+                                <div class="time" id="time" data-target-input="nearest">
+                                    <input type="text" id="patientAppTime"
+                                           class="form-control bg-white border-0 datetimepicker-input"
+                                           placeholder="Time" data-target="#time" data-toggle="datetimepicker"
+                                           style="height: 55px;">
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <input value="Make an appointment" class="btn btn-primary w-100 py-3"
+                                       id="appointmentSubmitBtn" type="submit"></input>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Appointment End -->
+</div>
+<!-- Appointment End -->
 
 
 <footer></footer>
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/tempusdominus/js/moment.min.js"></script>
+<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth-compat.js"></script>
 <script type="module">
     const firebaseConfig = {
-        apiKey: "AIzaSyCMoU_JU_frL3MAbDN6go4i3uuCfxRmhwA",
-        authDomain: "locdoc-4eeb4.firebaseapp.com",
-        projectId: "locdoc-4eeb4",
-        storageBucket: "locdoc-4eeb4.appspot.com",
-        messagingSenderId: "346162497719",
-        appId: "1:346162497719:web:512c631ce8ba0dfe312532",
-        measurementId: "G-RXQGDLGJSS"
+        apiKey: "AIzaSyA-NoBhm_FlOz_Ub-IIzCGi7aSTV_d5WFY",
+        authDomain: "locdoc-b7b41.firebaseapp.com",
+        projectId: "locdoc-b7b41",
+        storageBucket: "locdoc-b7b41.appspot.com",
+        messagingSenderId: "343801476610",
+        appId: "1:343801476610:web:d1f1c29962bf8db90a591b",
+        measurementId: "G-BCKKC49WL6"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -232,7 +244,7 @@
     function displayDepartment() {
         const doctorDept = document.getElementById("doctorDepartment");
         console.log({doctorDept});
-        fetch("http://localhost:8085/doctor")
+        fetch("https://locdoc-bknd.onrender.com/doctor")
             .then(response => {
                 return response.json();
             }).then(users => {
@@ -253,7 +265,7 @@
 
 
     const appForm = document.getElementById("appointmentForm");
-    appForm.addEventListener('submit',function (event) {
+    appForm.addEventListener('submit', function (event) {
         event.preventDefault();
         var pName = document.getElementById("patientAppName").value;
         var pEmail = document.getElementById("patientAppEmail").value;
@@ -264,12 +276,12 @@
         let date = new Date().toLocaleDateString();
 
         var settings = {
-            "url": "http://localhost:8085/appointment/add",
+            "url": "https://locdoc-bknd.onrender.com/appointment/add",
             "method": "POST",
             "timeout": 0,
             "headers": {
                 "Content-Type": "application/json",
-                "Allow-Access-Control-Origin":"*"
+                "Allow-Access-Control-Origin": "*"
             },
             "data": JSON.stringify({
                 "patient_phone": pPhone,
