--- a/login.html
+++ b/login.html
@@ -79,13 +79,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth-compat.js"></script>
 <script type="module">
     const firebaseConfig = {
-        apiKey: "AIzaSyCMoU_JU_frL3MAbDN6go4i3uuCfxRmhwA",
-        authDomain: "locdoc-4eeb4.firebaseapp.com",
-        projectId: "locdoc-4eeb4",
-        storageBucket: "locdoc-4eeb4.appspot.com",
-        messagingSenderId: "346162497719",
-        appId: "1:346162497719:web:512c631ce8ba0dfe312532",
-        measurementId: "G-RXQGDLGJSS"
+        apiKey: "AIzaSyA-NoBhm_FlOz_Ub-IIzCGi7aSTV_d5WFY",
+        authDomain: "locdoc-b7b41.firebaseapp.com",
+        projectId: "locdoc-b7b41",
+        storageBucket: "locdoc-b7b41.appspot.com",
+        messagingSenderId: "343801476610",
+        appId: "1:343801476610:web:d1f1c29962bf8db90a591b",
+        measurementId: "G-BCKKC49WL6"
     };
 
     firebase.initializeApp(firebaseConfig);
