--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
 
     <!-- Team Start -->
-    <div class="container-fluid py-5" id="team_start">
+   <!-- <div class="container-fluid py-5" id="team_start">
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 500px;">
                 <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Our Doctors</h5>
@@ -470,7 +470,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Team End -->
 
     <!-- Testimonial Start -->
@@ -549,13 +549,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth-compat.js"></script>
 <script type="module">
     const firebaseConfig = {
-        apiKey: "AIzaSyCMoU_JU_frL3MAbDN6go4i3uuCfxRmhwA",
-        authDomain: "locdoc-4eeb4.firebaseapp.com",
-        projectId: "locdoc-4eeb4",
-        storageBucket: "locdoc-4eeb4.appspot.com",
-        messagingSenderId: "346162497719",
-        appId: "1:346162497719:web:512c631ce8ba0dfe312532",
-        measurementId: "G-RXQGDLGJSS"
+        apiKey: "AIzaSyA-NoBhm_FlOz_Ub-IIzCGi7aSTV_d5WFY",
+        authDomain: "locdoc-b7b41.firebaseapp.com",
+        projectId: "locdoc-b7b41",
+        storageBucket: "locdoc-b7b41.appspot.com",
+        messagingSenderId: "343801476610",
+        appId: "1:343801476610:web:d1f1c29962bf8db90a591b",
+        measurementId: "G-BCKKC49WL6"
     };
 
     firebase.initializeApp(firebaseConfig);
