--- a/profile.html
+++ b/profile.html
@@ -166,15 +166,9 @@
             <div class="col-lg-4">
                 <div class="card mb-4">
                     <div class="card-body text-center">
-                        <img id="patient_profile_photo" src="" alt="avatar"
+                        <img id="patient_profile_photo" src="https://img.freepik.com/free-vector/doctor-character-background_1270-84.jpg?size=626&ext=jpg" alt="avatar"
                              class="rounded-circle img-fluid" style="width: 150px;">
                         <script>
-                            fetch("http://localhost:8085/doctor/8600162510").then(response =>
-                            {return response.json();
-                            }).then(users=> {
-                                document.getElementById("patient_profile_photo").setAttribute("src",users.image);
-                                console.log(users[0].image);
-                            });
                         </script>
                         <hr>
                         <div class="d-flex justify-content-center mb-2">
@@ -248,12 +242,9 @@
                                 <table class="table">
                                     <thead>
                                     <tr>
-                                        <th>Patient</th>
-                                        <th>Status</th>
-                                        <th>Appointment</th>
-                                        <th>Phone</th>
-                                        <th>Doctor</th>
-                                        <th>Actions</th>
+                                        <th>File Name</th>
+                                        <th>Date</th>
+                                        <th>Action</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -261,22 +252,13 @@
                                         <td>
                                             <div class="user-info">
                                                 <div class="user-info__basic">
-                                                    <h5 id="app_p_name" class="mb-0">Kiran Acharya</h5>
+                                                    <h5 id="app_p_name" class="mb-0">Prescription</h5>
                                                 </div>
                                             </div>
                                         </td>
                                         <td>
-                                            <span id="app_status" class="btn btn-primary">Consult</span>
-                                        </td>
-                                        <td>
                                             <h6 id="app_time" class="mb-0">06:00 PM</h6>
                                             <small id="app_date">2 Feb 2021</small>
-                                        </td>
-                                        <td>
-                                            <h6 class="mb-0">+91 9876543215</h6>
-                                        </td>
-                                        <td>
-                                            <h6 id="app_d_name" class="mb-0">Dr. Ananth</h6>
                                         </td>
                                         <td>
                                             <div class="dropdown open">
@@ -285,7 +267,8 @@
                                                     <i class="fa fa-ellipsis-v"></i>
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="triggerId1">
-                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Cancel</a>
+                                                    <a class="dropdown-item text-soft" href="#"><i class="fa fa-download mr-1"></i> Download</a>
+                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Delete</a>
                                                 </div>
                                             </div>
                                         </td>
@@ -294,22 +277,13 @@
                                         <td>
                                             <div class="user-info">
                                                 <div class="user-info__basic">
-                                                    <h5 id="app_p_name" class="mb-0">Kiran Acharya</h5>
+                                                    <h5 id="app_p_name" class="mb-0">Reports</h5>
                                                 </div>
                                             </div>
                                         </td>
                                         <td>
-                                            <span id="app_status" class="btn btn-primary">Consult</span>
-                                        </td>
-                                        <td>
-                                            <h6 id="app_time" class="mb-0">06:00 PM</h6>
-                                            <small id="app_date">2 Feb 2021</small>
-                                        </td>
-                                        <td>
-                                            <h6 class="mb-0">+91 9876543215</h6>
-                                        </td>
-                                        <td>
-                                            <h6 id="app_d_name" class="mb-0">Dr. Ananth</h6>
+                                            <h6 id="app_time" class="mb-0">10:00 PM</h6>
+                                            <small id="app_date">2 Feb 2023</small>
                                         </td>
                                         <td>
                                             <div class="dropdown open">
@@ -318,7 +292,8 @@
                                                     <i class="fa fa-ellipsis-v"></i>
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="triggerId1">
-                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Cancel</a>
+                                                    <a class="dropdown-item text-soft" href="#"><i class="fa fa-download mr-1"></i> Download</a>
+                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Delete</a>
                                                 </div>
                                             </div>
                                         </td>
@@ -327,22 +302,13 @@
                                         <td>
                                             <div class="user-info">
                                                 <div class="user-info__basic">
-                                                    <h5 id="app_p_name" class="mb-0">Kiran Acharya</h5>
+                                                    <h5 id="app_p_name" class="mb-0">Lab Samples</h5>
                                                 </div>
                                             </div>
                                         </td>
                                         <td>
-                                            <span id="app_status" class="btn btn-primary">Consult</span>
-                                        </td>
-                                        <td>
-                                            <h6 id="app_time" class="mb-0">06:00 PM</h6>
-                                            <small id="app_date">2 Feb 2021</small>
-                                        </td>
-                                        <td>
-                                            <h6 class="mb-0">+91 9876543215</h6>
-                                        </td>
-                                        <td>
-                                            <h6 id="app_d_name" class="mb-0">Dr. Ananth</h6>
+                                            <h6 id="app_time" class="mb-0">10:30 PM</h6>
+                                            <small id="app_date">2 March 2023</small>
                                         </td>
                                         <td>
                                             <div class="dropdown open">
@@ -351,7 +317,8 @@
                                                     <i class="fa fa-ellipsis-v"></i>
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="triggerId1">
-                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Cancel</a>
+                                                    <a class="dropdown-item text-soft" href="#"><i class="fa fa-download mr-1"></i> Download</a>
+                                                    <a class="dropdown-item text-danger" href="#"><i class="fa fa-trash mr-1"></i> Delete</a>
                                                 </div>
                                             </div>
                                         </td>
@@ -393,13 +360,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth-compat.js"></script>
 <script type="module">
     const firebaseConfig = {
-        apiKey: "AIzaSyCMoU_JU_frL3MAbDN6go4i3uuCfxRmhwA",
-        authDomain: "locdoc-4eeb4.firebaseapp.com",
-        projectId: "locdoc-4eeb4",
-        storageBucket: "locdoc-4eeb4.appspot.com",
-        messagingSenderId: "346162497719",
-        appId: "1:346162497719:web:512c631ce8ba0dfe312532",
-        measurementId: "G-RXQGDLGJSS"
+        apiKey: "AIzaSyA-NoBhm_FlOz_Ub-IIzCGi7aSTV_d5WFY",
+        authDomain: "locdoc-b7b41.firebaseapp.com",
+        projectId: "locdoc-b7b41",
+        storageBucket: "locdoc-b7b41.appspot.com",
+        messagingSenderId: "343801476610",
+        appId: "1:343801476610:web:d1f1c29962bf8db90a591b",
+        measurementId: "G-BCKKC49WL6"
     };
 
     firebase.initializeApp(firebaseConfig);
