--- a/service.html
+++ b/service.html
@@ -182,7 +182,7 @@
 
 
     <!-- Appointment Start -->
-    <div class="container-fluid bg-primary my-5 py-5">
+<!--    <div class="container-fluid bg-primary my-5 py-5">
         <div class="container py-5">
             <div class="row gx-5">
                 <div class="col-lg-6 mb-5 mb-lg-0">
@@ -244,7 +244,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Appointment End -->
 
 
@@ -323,13 +323,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-auth-compat.js"></script>
 <script type="module">
     const firebaseConfig = {
-        apiKey: "AIzaSyCMoU_JU_frL3MAbDN6go4i3uuCfxRmhwA",
-        authDomain: "locdoc-4eeb4.firebaseapp.com",
-        projectId: "locdoc-4eeb4",
-        storageBucket: "locdoc-4eeb4.appspot.com",
-        messagingSenderId: "346162497719",
-        appId: "1:346162497719:web:512c631ce8ba0dfe312532",
-        measurementId: "G-RXQGDLGJSS"
+        apiKey: "AIzaSyA-NoBhm_FlOz_Ub-IIzCGi7aSTV_d5WFY",
+        authDomain: "locdoc-b7b41.firebaseapp.com",
+        projectId: "locdoc-b7b41",
+        storageBucket: "locdoc-b7b41.appspot.com",
+        messagingSenderId: "343801476610",
+        appId: "1:343801476610:web:d1f1c29962bf8db90a591b",
+        measurementId: "G-BCKKC49WL6"
     };
 
     firebase.initializeApp(firebaseConfig);
